Compiler/obj/Debug/MParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\mariusg\Documents\Visual Studio 2013\Projects\Compiler\Compiler\Parser\Antlr\MParser.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace Compiler.Parser.Antlr {
 
	using Compiler.SyntaxTree; 

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class MParser : Parser {
	public const int
		Double=9, StringConstant=42, Mod=32, Bool=12, Void=2, GreaterEqual=24, 
		RightBracket=20, False=14, LineComment=45, IntegerConstant=40, LessEqual=22, 
		While=11, NotEqual=26, AndAnd=33, Equal=25, DoubleConstant=41, For=6, 
		Identifier=39, Int=3, Plus=27, Minus=28, Assign=38, Semi=36, Break=1, 
		Comment=44, New=8, Less=21, LeftBrace=17, Not=35, LeftBracket=19, OrOr=34, 
		StarStar=30, String=10, LeftParen=15, Star=29, Return=7, True=13, RightParen=16, 
		Whitespace=43, Else=5, Comma=37, If=4, Greater=23, Div=31, RightBrace=18;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'break'", "'void'", "'int'", "'if'", "'else'", "'for'", 
		"'return'", "'new'", "'double'", "'string'", "'while'", "'bool'", "'true'", 
		"'false'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'<'", "'<='", "'>'", 
		"'>='", "'=='", "'!='", "'+'", "'-'", "'*'", "'**'", "'/'", "'%'", "'&&'", 
		"'||'", "'!'", "';'", "','", "'='", "Identifier", "IntegerConstant", "DoubleConstant", 
		"StringConstant", "Whitespace", "Comment", "LineComment"
	};
	public const int
		RULE_program = 0, RULE_functionDecleration = 1, RULE_parameters = 2, RULE_variableDecleration = 3, 
		RULE_variable = 4, RULE_type = 5, RULE_primitiveType = 6, RULE_statementOrBlock = 7, 
		RULE_statementBlock = 8, RULE_statement = 9, RULE_ifStatement = 10, RULE_whileStatement = 11, 
		RULE_forStatement = 12, RULE_returnStatement = 13, RULE_breakStatement = 14, 
		RULE_expression = 15, RULE_coreExpression = 16, RULE_creator = 17, RULE_creatorSizes = 18, 
		RULE_functionCall = 19, RULE_arguments = 20, RULE_constant = 21;
	public static readonly string[] ruleNames = {
		"program", "functionDecleration", "parameters", "variableDecleration", 
		"variable", "type", "primitiveType", "statementOrBlock", "statementBlock", 
		"statement", "ifStatement", "whileStatement", "forStatement", "returnStatement", 
		"breakStatement", "expression", "coreExpression", "creator", "creatorSizes", 
		"functionCall", "arguments", "constant"
	};

	public override string GrammarFileName { get { return "MParser.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ProgramNode programNode;
		public FunctionDeclerationContext _functionDecleration;
		public ITerminalNode Eof() { return GetToken(MParser.Eof, 0); }
		public IReadOnlyList<FunctionDeclerationContext> functionDecleration() {
			return GetRuleContexts<FunctionDeclerationContext>();
		}
		public FunctionDeclerationContext functionDecleration(int i) {
			return GetRuleContext<FunctionDeclerationContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		_localctx.programNode =  nodeFactory.CreateProgramNode(_localctx);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 44; _localctx._functionDecleration = functionDecleration();
				_localctx.programNode.Functions.Add(_localctx._functionDecleration.func);
				}
				}
				State = 49;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Void) | (1L << Int) | (1L << Double) | (1L << String) | (1L << Bool))) != 0) );
			State = 51; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDeclerationContext : ParserRuleContext {
		public FunctionDecleration func;
		public IToken _Identifier;
		public ParametersContext _parameters;
		public StatementBlockContext _statementBlock;
		public TypeContext _type;
		public ITerminalNode LeftParen() { return GetToken(MParser.LeftParen, 0); }
		public ITerminalNode RightParen() { return GetToken(MParser.RightParen, 0); }
		public StatementBlockContext statementBlock() {
			return GetRuleContext<StatementBlockContext>(0);
		}
		public ITerminalNode Identifier() { return GetToken(MParser.Identifier, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ParametersContext parameters() {
			return GetRuleContext<ParametersContext>(0);
		}
		public ITerminalNode Void() { return GetToken(MParser.Void, 0); }
		public FunctionDeclerationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDecleration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterFunctionDecleration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitFunctionDecleration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDecleration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDeclerationContext functionDecleration() {
		FunctionDeclerationContext _localctx = new FunctionDeclerationContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_functionDecleration);
		try {
			State = 83;
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 53; Match(Void);
				State = 54; _localctx._Identifier = Match(Identifier);
				State = 55; Match(LeftParen);
				State = 56; _localctx._parameters = parameters();
				State = 57; Match(RightParen);
				State = 58; _localctx._statementBlock = statementBlock();
				 _localctx.func =  nodeFactory.CreateVoidFunctionDecleration(_localctx, (_localctx._Identifier!=null?_localctx._Identifier.Text:null), _localctx._parameters.vars, _localctx._statementBlock.stmts); 
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 61; Match(Void);
				State = 62; _localctx._Identifier = Match(Identifier);
				State = 63; Match(LeftParen);
				State = 64; Match(RightParen);
				State = 65; _localctx._statementBlock = statementBlock();
				 _localctx.func =  nodeFactory.CreateVoidFunctionDecleration(_localctx, (_localctx._Identifier!=null?_localctx._Identifier.Text:null), new List<VariableNode>(), _localctx._statementBlock.stmts); 
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 68; _localctx._type = type(0);
				State = 69; _localctx._Identifier = Match(Identifier);
				State = 70; Match(LeftParen);
				State = 71; _localctx._parameters = parameters();
				State = 72; Match(RightParen);
				State = 73; _localctx._statementBlock = statementBlock();
				 _localctx.func =  nodeFactory.CreateReturningFunctionDecleration(_localctx, (_localctx._Identifier!=null?_localctx._Identifier.Text:null), _localctx._parameters.vars, _localctx._statementBlock.stmts, _localctx._type.typeNode); 
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 76; _localctx._type = type(0);
				State = 77; _localctx._Identifier = Match(Identifier);
				State = 78; Match(LeftParen);
				State = 79; Match(RightParen);
				State = 80; _localctx._statementBlock = statementBlock();
				 _localctx.func =  nodeFactory.CreateReturningFunctionDecleration(_localctx, (_localctx._Identifier!=null?_localctx._Identifier.Text:null), new List<VariableNode>(), _localctx._statementBlock.stmts, _localctx._type.typeNode); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParametersContext : ParserRuleContext {
		public List<VariableNode> vars;
		public VariableContext first;
		public VariableContext _variable;
		public IReadOnlyList<VariableContext> variable() {
			return GetRuleContexts<VariableContext>();
		}
		public VariableContext variable(int i) {
			return GetRuleContext<VariableContext>(i);
		}
		public ITerminalNode Comma(int i) {
			return GetToken(MParser.Comma, i);
		}
		public IReadOnlyList<ITerminalNode> Comma() { return GetTokens(MParser.Comma); }
		public ParametersContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameters; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterParameters(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitParameters(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameters(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParametersContext parameters() {
		ParametersContext _localctx = new ParametersContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_parameters);
		 _localctx.vars =  new List<VariableNode>(); 
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; _localctx.first = _localctx._variable = variable();
			State = 92;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==Comma) {
				{
				{
				State = 86; Match(Comma);
				State = 87; _localctx._variable = variable();
				 _localctx.vars.Add(_localctx._variable.var); 
				}
				}
				State = 94;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			 _localctx.vars.Add(_localctx.first.var); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclerationContext : ParserRuleContext {
		public VariableDecleration decleration;
		public VariableContext _variable;
		public ExpressionContext _expression;
		public ITerminalNode Semi() { return GetToken(MParser.Semi, 0); }
		public ITerminalNode Assign() { return GetToken(MParser.Assign, 0); }
		public VariableContext variable() {
			return GetRuleContext<VariableContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public VariableDeclerationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDecleration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterVariableDecleration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitVariableDecleration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDecleration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclerationContext variableDecleration() {
		VariableDeclerationContext _localctx = new VariableDeclerationContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_variableDecleration);
		try {
			State = 107;
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 97; _localctx._variable = variable();
				State = 98; Match(Assign);
				State = 99; _localctx._expression = expression(0);
				State = 100; Match(Semi);
				 _localctx.decleration =  nodeFactory.CreateInitializedVariableDecleration(_localctx, _localctx._variable.var, _localctx._expression.expr); 
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 103; _localctx._variable = variable();
				State = 104; Match(Semi);
				 _localctx.decleration =  nodeFactory.CreateUnInitializedVariableDecleration(_localctx, _localctx._variable.var); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableContext : ParserRuleContext {
		public VariableNode var;
		public TypeContext _type;
		public IToken _Identifier;
		public ITerminalNode Identifier() { return GetToken(MParser.Identifier, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variable; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterVariable(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitVariable(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableContext variable() {
		VariableContext _localctx = new VariableContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_variable);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109; _localctx._type = type(0);
			State = 110; _localctx._Identifier = Match(Identifier);
			 _localctx.var =  nodeFactory.CreateVariableNode(_localctx, _localctx._type.typeNode, nodeFactory.CreateVariableIdNode(_localctx, (_localctx._Identifier!=null?_localctx._Identifier.Text:null))); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public TypeNode typeNode;
		public TypeContext t;
		public PrimitiveTypeContext _primitiveType;
		public ITerminalNode RightBracket() { return GetToken(MParser.RightBracket, 0); }
		public ITerminalNode LeftBracket() { return GetToken(MParser.LeftBracket, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public PrimitiveTypeContext primitiveType() {
			return GetRuleContext<PrimitiveTypeContext>(0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		return type(0);
	}

	private TypeContext type(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 10;
		EnterRecursionRule(_localctx, 10, RULE_type, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 114; _localctx._primitiveType = primitiveType();
			 _localctx.typeNode =  nodeFactory.CreateTypeNode(_localctx, _localctx._primitiveType.primitive); 
			}
			_ctx.stop = _input.Lt(-1);
			State = 123;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeContext(_parentctx, _parentState);
					_localctx.t = _prevctx;
					PushNewRecursionContext(_localctx, _startState, RULE_type);
					State = 117;
					if (!(Precpred(_ctx, 1))) throw new FailedPredicateException(this, "Precpred(_ctx, 1)");
					State = 118; Match(LeftBracket);
					State = 119; Match(RightBracket);
					 _localctx.typeNode =  nodeFactory.CreateTypeNodeArrayOfType(_localctx, _localctx.t.typeNode.Type); 
					}
					} 
				}
				State = 125;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class PrimitiveTypeContext : ParserRuleContext {
		public PrimitiveType primitive;
		public ITerminalNode String() { return GetToken(MParser.String, 0); }
		public ITerminalNode Bool() { return GetToken(MParser.Bool, 0); }
		public ITerminalNode Double() { return GetToken(MParser.Double, 0); }
		public ITerminalNode Int() { return GetToken(MParser.Int, 0); }
		public PrimitiveTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_primitiveType; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterPrimitiveType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitPrimitiveType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrimitiveType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrimitiveTypeContext primitiveType() {
		PrimitiveTypeContext _localctx = new PrimitiveTypeContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_primitiveType);
		try {
			State = 134;
			switch (_input.La(1)) {
			case Int:
				EnterOuterAlt(_localctx, 1);
				{
				State = 126; Match(Int);
				 _localctx.primitive =  PrimitiveType.Int; 
				}
				break;
			case String:
				EnterOuterAlt(_localctx, 2);
				{
				State = 128; Match(String);
				 _localctx.primitive =  PrimitiveType.String; 
				}
				break;
			case Double:
				EnterOuterAlt(_localctx, 3);
				{
				State = 130; Match(Double);
				 _localctx.primitive =  PrimitiveType.Double; 
				}
				break;
			case Bool:
				EnterOuterAlt(_localctx, 4);
				{
				State = 132; Match(Bool);
				 _localctx.primitive =  PrimitiveType.Boolean; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementOrBlockContext : ParserRuleContext {
		public List<StatementNode> stmts;
		public StatementBlockContext _statementBlock;
		public StatementContext _statement;
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public StatementBlockContext statementBlock() {
			return GetRuleContext<StatementBlockContext>(0);
		}
		public StatementOrBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statementOrBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.EnterStatementOrBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMParserListener typedListener = listener as IMParserListener;
			if (typedListener != null) typedListener.ExitStatementOrBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMParserVisitor<TResult> typedVisitor = visitor as IMParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementOrBlock(this);
			else return visitor.VisitChildren(this);
		}
	}
